idf_component_register(SRCS "main.c"
                       INCLUDE_DIRS "."
                       REQUIRES pcf8574)

# idf_component_register(SRCS "main.c"
#                        INCLUDE_DIRS "."
#                        REQUIRES pcf8574)

# # idf_component_register(SRCS "main.c"
# #                     INCLUDE_DIRS ".")
